# data-extraction-evaluation-toolkit

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config_example.py  default_config.yaml  demo.py  env.example  index.html  mkdocs.yml  objects.inv  pyproject.toml
.cursor/rules/: pull-request-best-practices.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  destiny-data-extraction-issue-template.md
.github/workflows/: docs.yml  linting.yml  tests.yml
CONTRIBUTING/: index.html
LICENSE/: index.html
api/: index.html
app/: __init__.py  assess_text_quality.py  exceptions.py  logger.py  parser.py  settings.py
app/data_models/: __init__.py  base.py  eppi.py  pipeline.py
app/extractors/: __init__.py  data_extraction_module.py  data_extractor.py  llm_data_extractor.py
app/models/: __init__.py  base.py  eppi.py
app/processors/: __init__.py  annotation_converter.py  eppi_annotation_converter.py  parser.py
app/prompts/: system_prompt_v0.txt
app/scripts/: annotation_converter.py  annotation_converter_cli.py  data_extractor_cli.py  default_pipeline.py  eppi_annotation_converter_cli.py  pipeline_interactive_prompt_population.py  pipeline_prompt_csv_02.py  pipeline_prompts_from_eppi_json.py  simple_llm_eval.py
cli/: index.html
deet/: custom_hierarchical.py  exceptions.py  logger.py  main_hierarchical.py  settings.py
deet/data_models/: __init__.py  base.py  documents.py  enums.py  eppi.py  evaluation.py  evaluation_splits.py  extraction.py  inheritance_issue.py  inheritance_issue_typevar_fix.py  pipeline.py  processed.py  processed_gold_standard_annotations.py  project.py  ui_schema.py
deet/evaluators/: gold_standard_llm_evaluator.py
deet/extractors/: base_extractor.py  cli_helpers.py  extractor_registry.py  keyword_extractor.py  llm_data_extractor.py  semantic_keyword_extractor.py
deet/hierarchical_mvp/: RCTextraction.py  RCTmodel.py  __init__.py  extraction.py  models.py  utils.py
deet/processors/: base_converter.py  converter_register.py  covidence_annotation_converter.py  csv_annotation_converter.py  directory_processor.py  eppi_additional_text_mapping.py  eppi_annotation_converter.py  linker.py  parser.py
deet/prompts/: system_prompt.txt
deet/scripts/: __init__.py  batch_pipeline.py  cli.py  context.py  create_project.py  create_prompt_definition_csv.py  default_pipeline.py  eppi_annotation_converter_cli.py  new_batch.py  pipeline_interactive_prompt_population.py  pipeline_prompt_csv_01.py  pipeline_prompt_csv_02.py  pipeline_prompts_from_eppi_json.py  test_llm_call.py  typer_context.py
deet/scripts/commands/: deprecated.py  experiments.py  project.py  run.py
deet/scripts/converters/: CSV_to_EPPI.py  csv_config.json  example.csv
deet/ui/: __init__.py  cli.py  messenger.py  terminal.py  web.py  wizards.py
deet/ui/terminal/: __init__.py  components.py  render.py  wizards.py
deet/ui/terminal/templates/: __init__.py  help_text.py  project.py  welcome.md
deet/ui/terminal/templates/extraction/: config_init.md
deet/ui/terminal/templates/project/: configure_env.md  init.md  success.md
deet/utils/: assess_text_quality.py  cli_utils.py  destiny_utils.py  evaluation_utils.py  file_utils.py  identifier_utils.py  tokenisation.py  tokenization.py
development/: index.html  objects.inv
development/CONTRIBUTING/: index.html
development/LICENSE/: index.html
development/api/: index.html
development/cli/cli/: index.html
development/concepts/data-extraction/: index.html
development/concepts/evaluation/: index.html
development/concepts/experiment/: index.html
development/concepts/gold-standard/: index.html
development/concepts/project/: index.html
development/concepts/prompting-strategies/: index.html
development/glossary/: index.html
development/python/introduction/: index.html
development/reference/api/: index.html
development/search/: search_index.json
development/setup/installation/: index.html
development/setup/quickstart/: index.html
docs/: CONTRIBUTING.md  LICENSE.md  STRING_OUTPUT_BRANCH_NOTES.md  api.md  cli.md  glossary.md  index.md  installation.md
docs/cli/: cli.md
docs/concepts/: data-extraction.md  evaluation.md  experiment.md  gold-standard.md  project.md  prompting-strategies.md
docs/python/: introduction.md
docs/setup/: quickstart.md
examples/quickstart/: link_map.csv  project.toml  project.yaml  reports.json
installation/: index.html
prompts/: system_prompt.txt
search/: search_index.json
tests/: conftest.py  test_annotation_converter.py  test_base.py  test_data_extraction_module.py  test_eppi.py  test_eppi_reasoning_field.py  test_parser.py  test_parser_real_files.py  test_placeholder.py  test_simple_llm_eval_updated.py
tests/integration/: test_ebmnlp_with_metadata.py  test_parser_real_files.py  test_project_pipeline.py
tests/integration/cassettes/test_project_pipeline/: test_extraction_with_evaluation[dataset_base_path0].yaml  test_extraction_without_evaluating[dataset_base_path0].yaml  test_extraction_without_evaluating_or_linking[dataset_base_path0].yaml
tests/integration/datasets/ebmnlp_with_metadata/: goldstandard_llm_comparison.csv  link_map.csv  prompt_definitions.csv  reports.json
tests/test_files/input/: conrad.epub  conrad.html  sample_eppi.json
tests/test_files/output/: Abroms_2008.md  conrad-epub-parsed.md  conrad-html-parsed.md  vieira_2008.md
tests/unit/: test_annotation_converter.py  test_base.py  test_cli.py  test_cli_helpers.py  test_cli_utils.py  test_converter_register.py  test_csv_annotation_converter.py  test_doccuments.py  test_documents.py  test_eppi.py  test_eppi_annotation_converter.py  test_extraction.py  test_extractor_register.py  test_gold_standard_llm_evaluator.py  test_identifier_utils.py  test_linker.py  test_llm_data_extractor.py  test_parser.py  test_pipeline.py  test_project.py  test_tokenisation.py  test_tokenization.py
tests/unit/test_ui/: test_messenger.py  test_render.py  test_wizards.py
(+4 files in other folders)
